--- a/css/vangogh.css
+++ b/css/vangogh.css
@@ -459,14 +459,19 @@ height: 650px;
 .nuestras {
     color: white;
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
-    font-size: 100px;
+    font-size: 5rem;
     font-weight: 200;
 }
 .burgers {
     color: white;
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
-    font-size: 100px;
+    font-size: 5rem;
     font-weight: 800;
+}
+
+.texto-web {
+    color: rgb(0, 0, 0);
+    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
 }
   /* BURGERS CON GRID FOTO DERECHA
 */
