--- a/css/vangogh.css
+++ b/css/vangogh.css
@@ -473,49 +473,49 @@ height: 650px;
 }
 
 .fondo_auto {
-    background-image: url("../imgs//fondo_tarjeta_autoretato.jpg");
+    background-image: url("../imgs/fondo_tarjeta_autoretato.jpg");
     background-repeat: no-repeat; 
     background-size: cover; }
 
 .fondo_vangogh {
-    background-image: url("../imgs//fondo_tarjeta_vangogh.jpg");
+    background-image: url("../imgs/fondo_tarjeta_vangogh.jpg");
     background-repeat: no-repeat; 
     background-size: cover; 
 }
 
 
 .fondo_girasoles{
-    background-image: url("../imgs//fondo_tarjeta_girasoles.jpg");
+    background-image: url("../imgs/fondo_tarjeta_girasoles.jpg");
     background-repeat: no-repeat; 
     background-size: cover; 
 }
 
 .fondo_raices {
-    background-image: url("../imgs//fondo_tarjeta_raices.jpg");
+    background-image: url("../imgs/fondo_tarjeta_raices.jpg");
     background-repeat: no-repeat; 
     background-size: cover; 
 }
 
 .fondo_terraza {
-    background-image: url("../imgs//fondo_tarjeta_terraza.jpg");
+    background-image: url("../imgs/fondo_tarjeta_terraza.jpg");
     background-repeat: no-repeat; 
     background-size: cover; 
 }
 
 .fondo_cuervos {
-    background-image: url("../imgs//fondo_tarjeta_cuervos.jpg");
+    background-image: url("../imgs/fondo_tarjeta_cuervos.jpg");
     background-repeat: no-repeat; 
     background-size: cover; 
 }
 
 .fondo_viñedo {
-    background-image: url("../imgs//fondo_tarjeta_viñedo.jpg");
+    background-image: url("../imgs/fondo_tarjeta_viñedo.jpg");
     background-repeat: no-repeat; 
     background-size: cover; 
 }
 
 .fondo_vincent{
-    background-image: url("../imgs//fondo_tarjeta_vincent.jpg");
+    background-image: url("../imgs/fondo_tarjeta_vincent.jpg");
     background-repeat: no-repeat; 
     background-size: cover; 
 }
