--- a/css/vangogh.css
+++ b/css/vangogh.css
@@ -4,6 +4,20 @@ padding: 0;
 box-sizing: border-box;
 }
 
+
+.custom-toggler {
+    display: flex;
+    border-color: aliceblue;
+    background-color: aliceblue;
+    width: 3rem;
+    height: 2rem;
+   align-items: center;
+   justify-content: center;
+}
+
+.nav-item {
+    padding: 0 1rem 0 1rem;
+}
 body {
     background-image: url("../imgs//fondo2.jpg");
     background-repeat: no-repeat; 
