--- a/css/vangogh.css
+++ b/css/vangogh.css
@@ -14,6 +14,7 @@ box-sizing: border-box;
    align-items: center;
    justify-content: center;
    margin-right: 1rem;
+   border-radius:5px 
 }
 
 .texto-titulo-nav {
@@ -30,6 +31,21 @@ body {
     background-size: cover; 
 }
 
+
+/* FOOTER */
+.texto-web-footer {
+    color: rgb(248, 244, 244);
+    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
+    font-size: 2.5rem;
+    line-height: 1.8rem;
+    text-align: right;
+
+}
+
+.contener_derechos {
+    background-image: url("../imgs//fondo_derechos.jpg");
+    background-repeat: no-repeat; 
+    background-size: cover; }
 
 @media only screen and (min-width: 767px) {
 
