--- a/css/vangogh.css
+++ b/css/vangogh.css
@@ -31,25 +31,57 @@ body {
     background-size: cover; 
 }
 
-
-.texto-web-titulo {
+@media only screen and (min-width: 767px) {
+    .texto-titulo {
+        width: 500px;
+        font-size: 90px ;
+        color: rgb(248, 244, 244);
+        font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
+        font-weight: 500;
+        line-height: 4.4rem;}
+ 
+    
+    
+ .texto-subitutlo {
+    width: 500px;
+    font-size: 50px ;
     color: rgb(248, 244, 244);
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
-    font-size: 3.5rem;
-    font-weight: 500;
-    line-height: 2.4rem;
-  
+    font-weight: 300;
+
+ }       
 }
 
-.fondo_portada {
-    background-image: url("../imgs//portada_indezx.png");
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
+
+
+.texto-titulo {
+
+    font-size: 70px ;
+    color: rgb(248, 244, 244);
+    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
+    font-weight: 500;
+    line-height: 4.4rem;}
+
+.texto-subitutlo {
+
+    font-size: 30px ;
+    color: rgb(248, 244, 244);
+    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
+    font-weight: 300;
+
+ }       
+
 
 .texto-web-boton {
     color: rgb(248, 244, 244);
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
+}
+.contenedor-portada-index {
+    padding: 5rem 0 5rem 0;
+    height: 25rem;
+    background-image: url("../imgs//portada_indezx.png");
+    background-repeat: no-repeat; 
+    background-size: cover; 
 }
 
 .contenedor-boton-portada {
@@ -57,6 +89,9 @@ body {
     justify-content: center;
 }
 
+.contenedor-final-index {
+    margin-bottom: 20rem;
+}
 /* FOOTER */
 .texto-web-footer {
     color: rgb(248, 244, 244);
@@ -67,10 +102,7 @@ body {
 
 }
 
-.contener_derechos {
-    background-image: url("../imgs//fondo_derechos.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; }
+
 
 @media only screen and (min-width: 767px) {
 
@@ -521,11 +553,15 @@ height: 650px;
     color: white;
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
     font-weight: 200;
+    line-height: 2rem;
+
 }
 .burgers {
     color: white;
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
     font-weight: 800;
+    line-height: 2rem;
+
 }
 
 .texto-web {
