--- a/css/vangogh.css
+++ b/css/vangogh.css
@@ -102,7 +102,22 @@ body {
 
 }
 
+.texto-web-contacto{
+    color: rgb(248, 244, 244);
+    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
+    font-size: 5.5rem;
+    line-height: 4.1rem;
+    text-align: center;
+}
 
+.texto-web-contacto-lista {
+
+    color: rgb(248, 244, 244);
+    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
+    font-size: 2.5rem;
+    line-height: 3rem;
+    text-align: left;
+}
 
 @media only screen and (min-width: 767px) {
 
