--- a/css/vangogh.css
+++ b/css/vangogh.css
@@ -4,7 +4,7 @@ padding: 0;
 box-sizing: border-box;
 }
 
-
+/* Navbar  */
 .custom-toggler {
     display: flex;
     border-color: aliceblue;
@@ -31,6 +31,9 @@ body {
     background-size: cover; 
 }
 
+/* Portada Index */
+
+
 @media only screen and (min-width: 767px) {
     .texto-titulo {
         width: 500px;
@@ -51,7 +54,6 @@ body {
 
  }       
 }
-
 
 
 .texto-titulo {
@@ -129,67 +131,7 @@ body {
 
 }
 
-
-
-
-/* CERVEZA */
-
-.descripcion_cerveza {
-    width: 250px;
-    font-size: 20px;
-    min-height: 30%;
-    color: white;
-    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
-    line-height: 20px;
-    text-align: center;
-
-}
-
-.IBU {
-    margin-top: 10px;
-    list-style:none ;
-    color: white;
-    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
-    line-height: 20px;
-    text-align: center;
-}
-
-.logocerveza {
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.logo_marca_cerveza {
-    display: flex;
-    height: 100px;
-    margin:  -25px 0 -15px 0 ;
-    text-align: center;
-
-    
-}
-
-.Cerveza_Name {
-    text-align: center;
-    color: white;
-    font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
-    font-weight: 400;
-    font-size: 40px;
-  }
-
-
-
-.nuestrasburgers {
-    text-align: center;
-    margin: 50px auto 80px auto;
-
-}
-.NuestrosSanguches {
-    text-align: center;
-    margin: 10px auto 50px auto;
-}
-
+ /* Títulos menú */
 .nuestras {
     color: white;
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
@@ -204,58 +146,100 @@ body {
     line-height: 2rem;
 
 }
-
+ /* Formato texto general */
 .texto-web {
     color: rgb(248, 244, 244);
     font-family: 'Oswald', sans-serif, Georgia, 'Times New Roman', Times, serif;
 }
+/*FONDOS TARJETAS MENÚ  */
+    .fondo_auto {
+        background-image: url("../imgs/fondo_tarjeta_autoretato.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; }
 
-.fondo_auto {
-    background-image: url("../imgs/fondo_tarjeta_autoretato.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; }
+    .fondo_vangogh {
+        background-image: url("../imgs/fondo_tarjeta_vangogh.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; 
+    }
 
-.fondo_vangogh {
-    background-image: url("../imgs/fondo_tarjeta_vangogh.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; 
+    .fondo_girasoles{
+        background-image: url("../imgs/fondo_tarjeta_girasoles.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; 
+    }
+
+    .fondo_raices {
+        background-image: url("../imgs/fondo_tarjeta_raices.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; 
+    }
+
+    .fondo_terraza {
+        background-image: url("../imgs/fondo_tarjeta_terraza.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; 
+    }
+
+    .fondo_cuervos {
+        background-image: url("../imgs/fondo_tarjeta_cuervos.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; 
+    }
+
+    .fondo_viñedo {
+        background-image: url("../imgs/fondo_tarjeta_viñedo.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; 
+    }
+
+    .fondo_vincent{
+        background-image: url("../imgs/fondo_tarjeta_vincent.jpg");
+        background-repeat: no-repeat; 
+        background-size: cover; 
 }
 
+ /* contacto */
 
-.fondo_girasoles{
-    background-image: url("../imgs/fondo_tarjeta_girasoles.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
+ @media only screen and (min-width: 767px) {
 
-.fondo_raices {
-    background-image: url("../imgs/fondo_tarjeta_raices.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
+    .container-nosotros {
+        margin-top: 7rem;
+        margin-bottom: 1rem;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    justify-content: center;
+         }
 
-.fondo_terraza {
-    background-image: url("../imgs/fondo_tarjeta_terraza.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
+         .separador-nosotros {
+            height: 6rem;
+        }
+        
+    }
+    
 
-.fondo_cuervos {
-    background-image: url("../imgs/fondo_tarjeta_cuervos.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
+ @media only screen and (max-width: 767px) {
 
-.fondo_viñedo {
-    background-image: url("../imgs/fondo_tarjeta_viñedo.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
+    .container-nosotros {
+   
+        justify-content: center;
+        text-align: center;
+        padding-right: 2rem;
+        padding-left: 2rem;
 
-.fondo_vincent{
-    background-image: url("../imgs/fondo_tarjeta_vincent.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
 
- 
+         }
+
+
+    .container-nosotros-flex {
+        margin-top: 5rem;
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: center;
+             }
+
+      
+    }
+    
+
+  
